--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ tagline: IT技术文章聚合
     <h3>友情链接</h3>
     <ul class="friendlink">
         <li><p><a href="http://justjavac.iteye.com" target="_blank" rel="me">justjavac(iteye)</a></p></li>
+        <li><p><a href="http://l.51yip.com/" target="_blank" rel="me">Linux在线命令</a></p></li>
     </ul>
     </section>
     
