--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ tagline: IT技术文章聚合
 
   <section>
     <h3>RSS订阅</h3>
-    本博客源码托管在 <a rel="nofollow" href="https://github.com/justjavac/justjavac.github.com" target="_blank">github</a> 上，
+    本博客源码托管在 <a rel="nofollow" href="https://github.com/doc5188/doc5188.github.io" target="_blank">github</a> 上，
     因此访问速度不是很快，而且有时会出现打不开的情况（你懂滴），
     建议大家多使用RSS访问阅读
     <ul id="recent_posts">
