--- a/index.html
+++ b/index.html
@@ -134,7 +134,13 @@ tagline: IT技术文章聚合
     <ul class="friendlink">
         <li><p><a href="http://justjavac.iteye.com" target="_blank" rel="me">justjavac(iteye)</a></p></li>
         <li><p><a href="http://l.51yip.com/" target="_blank" rel="me">Linux在线命令</a></p></li>
-    </ul>
+    </u>
+    <h3>免费代码托管</h3>
+	<ul class="friendlink">
+	<li><p><a href="http://github.com" target="_blank" rel="me">github</a></li>
+	<li><p><a href="https://gitcafe.com" target="_blank" rel="me">gitcafe</a></li>
+	<li><p><a href="https://bitbucket.org" target="_blank" rel="me">bitbucket</a></li>
+	</ul>
     </section>
     
     <section>
