--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ tagline: IT技术文章聚合
 	<li><p><a href="http://github.com" target="_blank" rel="me">github</a></li>
 	<li><p><a href="https://gitcafe.com" target="_blank" rel="me">gitcafe</a></li>
 	<li><p><a href="https://bitbucket.org" target="_blank" rel="me">bitbucket</a></li>
+	<li><p><a href="https://alijiedi.com" target="_blank" rel="me">alijiedi.com</a></li>
+	<li><p><a href="https://www.tcbz188.com" target="_blank" rel="me">tcbz188.com</a></li>
 	</ul>
     </section>
     
