--- a/resource.html
+++ b/resource.html
@@ -16,3 +16,4 @@ TriAquae是Python语言+ Django Web框架编写的开源的服务器运维管理
 
 avplayer(https://github.com/Jackarain/avplayer) : 一个基于FFmpeg、libtorrent的P2P播放器实现
 
+Php-mongo-driver: https://github.com/mongodb/mongo-php-driver
