Add friend link
Signed-off-by: Gavin Tao <gavin.tao17@gmail.com>

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ tagline: IT技术文章聚合
 	<li><p><a href="http://github.com" target="_blank" rel="me">github</a></li>
 	<li><p><a href="https://gitcafe.com" target="_blank" rel="me">gitcafe</a></li>
 	<li><p><a href="https://bitbucket.org" target="_blank" rel="me">bitbucket</a></li>
-	<li><p><a href="https://alijiedi.com" target="_blank" rel="me">alijiedi.com</a></li>
-	<li><p><a href="https://www.tcbz188.com" target="_blank" rel="me">tcbz188.com</a></li>
+	<li><p><a href="https://www.juhelian.com" target="_blank" rel="me">聚合链-种子搜索神器</a></li>
 	</ul>
     </section>
     
